# rinha-de-backend-2024

./: .gitignore  Cargo.toml  Dockerfile  client.http  docker-compose.yml  nginx.conf
db/: init.sql
src/: database.rs  handlers.rs  main.rs
