[package]
name = "rinha-de-backend-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["http2"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.34", features = ["serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }